--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ethers": "^5.0.19",
     "express": "^4.17.1",
     "express-slash": "^2.0.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
