--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,15 @@
     "react-scripts": "4.0.0",
     "react-spring": "^8.0.27",
     "react-toast-notifications": "^2.4.0",
+    "serve": "^11.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "serve -s build -l 3000"
   },
   "eslintConfig": {
     "extends": [
