--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - /bin/sh
       - -c
       - |
-          node /app/ganache-core.docker.cli.js -f $${CLOUDFLARE_RPC_URL} -p 8545 -d
+          node /app/ganache-core.docker.cli.js -f $${LOCALHOST_NODE} -p 8545 -d
     ports:
       - "8545:8545"
     expose:
